--- a/website/index.html
+++ b/website/index.html
@@ -5,12 +5,25 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <title>RescueOP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="main.css">
+
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+   integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+   crossorigin=""/>
+
+   <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+   integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+   crossorigin=""></script>
     
 </head>
 <body>
     <h1>RescueOP</h1>
     <div id="home">
         <div id="spots"></div>
+    </div>
+    <div id="mapin">
+
     </div>
 
     <!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
